src/objects/Social_Icons__c.object
<CustomObject>
    <description>Table to store font-based social icons per Site.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if Social Icon is displayed on website.</description>
        <inlineHelpText>If Checked, Social Icon will display above the Site&apos;s navigation bar.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master-Detail relationship with Atom object - Icon Record Type.</description>
        <inlineHelpText>Search for the Icon required for this Social Icon</inlineHelpText>
        <label>Atom</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Icon</value>
            </filterItems>
            <filterItems>
                <field>Content__c.Icon_Type__c</field>
                <operation>equals</operation>
                <value>Social</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Social Icons</relationshipLabel>
        <relationshipName>Social_Icons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>Master-Detail relationship with the Site object.</description>
        <inlineHelpText>Search for the Site associated to this Social Icon</inlineHelpText>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Social Icons</relationshipLabel>
        <relationshipName>Social_Icons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>The order in which the social icons will display on the page</description>
        <label>Sort Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL of the designated social media</description>
        <inlineHelpText>Enter the URL for this Social Icon</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Social Icon</label>
    <nameField>
        <label>Social Icon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Icons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>